# glcraft

./: .gitignore  CMakeLists.txt  block.cpp  block.h  block_registry.cpp  block_registry.h  camera.cpp  camera.h  chunk.cpp  chunk.h  chunk_generator.cpp  chunk_generator.h  crosshair.cpp  crosshair.h  main.cpp  mesh_generator.cpp  mesh_generator.h  minecraft.cpp  minecraft.h  readme.md  renderer.cpp  renderer.h  shader.cpp  shader.h  texture_manager.cpp  texture_manager.h  timer.h  utils.cpp  utils.h  world.cpp  world.h  world_gen.cpp  world_gen.h
shaders/: crosshair.frag  crosshair.vert  shader.frag  shader.vert
